styles: fixed init button left side spacing

--- a/style.css
+++ b/style.css
@@ -651,6 +651,7 @@ body.privacy-page #controls .control-box {
     border: 5px solid #313236;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), inset 0 0 10px 1px rgba(0, 0, 0, 0.1);
     padding: 5px;
+    margin-right: 24px; /* used to shift the init button slightly to the left  */
     border-radius: 5px;
 }
 
